--- a/nginx-ingress-controller/values-overrding.yaml
+++ b/nginx-ingress-controller/values-overrding.yaml
@@ -1,2 +1,6 @@
 extraArgs:
   default-ssl-certificate: "cert-manager/selfsigned-cert"
+
+service:
+  annotations:
+    cloud.google.com/load-balancer-type: "Internal"
