fix(nginx-ingress-controller): test ssl secret

--- a/nginx-ingress-controller/values-overrding.yaml
+++ b/nginx-ingress-controller/values-overrding.yaml
@@ -1,5 +1,6 @@
 extraArgs:
-  default-ssl-certificate: "cert-manager/selfsigned-cert"
+  default-ssl-certificate: "cert-manager/selfsigned-cert-tls"
+#  default-ssl-certificate: "cert-manager/selfsigned-cert"
 
 service:
   annotations:
