fix(nginx-ingress-controller): load-balancer-type change

--- a/nginx-ingress-controller/values-overrding.yaml
+++ b/nginx-ingress-controller/values-overrding.yaml
@@ -1,7 +1,7 @@
 extraArgs:
   default-ssl-certificate: "cert-manager/selfsigned-cert-tls"
 #  default-ssl-certificate: "cert-manager/selfsigned-cert"
-
-service:
-  annotations:
-    cloud.google.com/load-balancer-type: "Internal"
+#
+#service:
+#  annotations:
+#    cloud.google.com/load-balancer-type: "Internal"
