fix(nginx-ingress-controller): test

--- a/argo-cd/values-overriding.yaml
+++ b/argo-cd/values-overriding.yaml
@@ -4,8 +4,7 @@ notifications:
 server:
   ingress:
     enabled: true
-    ingressClassName: nginx
     annotations:
-      kubernetes.io/ingress.class: nginx
+      - kubernetes.io/ingress.class: nginx
+    ingressClassName: nginx
     hostname: argocd.gatherplan.site
-
