feat(cert-manager): using helm-chart

--- a/cert-manager/values.yaml
+++ b/cert-manager/values.yaml
@@ -706,5 +706,4 @@ certificate:
   certificateName: certificate-by-letsencrypt
   enabled: true
   dnsNames:
-    - "*.timiddev.shop"
-    - "timiddev.shop"
+    - "*.gatherplan.site"
