--- a/argo-cd/values-overriding.yaml
+++ b/argo-cd/values-overriding.yaml
@@ -2,9 +2,10 @@ notifications:
   enabled: false
 
 server:
+  extraArgs:
+    - --insecure
   ingress:
     enabled: true
     annotations:
       - kubernetes.io/ingress.class: nginx
-    ingressClassName: nginx
     hostname: argocd.gatherplan.site
