--- a/gatherplan-client/templates/deployment.yaml
+++ b/gatherplan-client/templates/deployment.yaml
@@ -38,7 +38,10 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: 3000
+              protocol: TCP
+            - name: api
+              containerPort: 8000
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
