--- a/gatherplan-client/templates/deployment.yaml
+++ b/gatherplan-client/templates/deployment.yaml
@@ -38,11 +38,10 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: API_URL
-              value: "http://localhost:8000"
+              value: "http://127.0.0.1:8000"
             - name: DEPLOY_URL
-              value: "http://localhost:3000"
-            - name: BACKEND_HOST
-              value: "http://localhost"
+              value: "http://127.0.0.1:3000"
+          command: ["sh", "-c", "poetry", "run", "reflex", "run", "--env", "prod"]
           ports:
             - name: http
               containerPort: 3000
