feat(cert-manager): staging -> prod

--- a/cert-manager/templates/_custom/certificate.yaml
+++ b/cert-manager/templates/_custom/certificate.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretName: {{ .Values.certificate.certificateName }}
   issuerRef:
-    name: letsencrypt-staging
+    name: {{ .Values.clusterIssuer.name }}
     kind: ClusterIssuer
   dnsNames:
     {{- range .Values.certificate.dnsNames }}
