--- a/argo-cd/values-overriding.yaml
+++ b/argo-cd/values-overriding.yaml
@@ -6,6 +6,9 @@ server:
     - --insecure
   ingress:
     enabled: true
-    annotations:
-      - kubernetes.io/ingress.class: nginx
+#    annotations:
+#      kubernetes.io/ingress.class: nginx
+#      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+#      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     hostname: argocd.gatherplan.site
+    ingressClassName: nginx
