--- a/cert-manager/templates/_custom/clusterissuer.yaml
+++ b/cert-manager/templates/_custom/clusterissuer.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.clusterIssuer.enabled }}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
@@ -15,3 +16,4 @@ spec:
             serviceAccountSecretRef:
               name: clouddns-dns01-solver-svc-acct
               key: key.json
+  {{- end }}
