feat(gatherplan-client-back): add healthcheck

--- a/gatherplan-client-back/values-overriding.yaml
+++ b/gatherplan-client-back/values-overriding.yaml
@@ -29,3 +29,15 @@ ingress:
       paths:
         - path: /
           pathType: ImplementationSpecific
+
+
+livenessProbe:
+  httpGet:
+    path: /ping
+    port: http
+    initialDelaySeconds: 30
+readinessProbe:
+  httpGet:
+    path: /ping
+    port: http
+    initialDelaySeconds: 30
