--- a/gatherplan-server/values-overriding.yaml
+++ b/gatherplan-server/values-overriding.yaml
@@ -1,7 +1,7 @@
 image:
   repository: us-east1-docker.pkg.dev/sharp-voyage-345407/gatherplan/gatherplan-server
   pullPolicy: IfNotPresent
-  tag: v78ab141
+  tag: v04e5e65
 env:
   - name: API_URL
     value: https://test-api.gatherplan.site
