mariadb secret update

--- a/mariadb/templates/primary/statefulset.yaml
+++ b/mariadb/templates/primary/statefulset.yaml
@@ -169,7 +169,11 @@ spec:
             {{- end }}
             {{- if not (empty .Values.auth.username) }}
             - name: MARIADB_USER
-              value: {{ .Values.auth.username | quote }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "mariadb.secretName" . }}
+                  key: mariadb-username
+{{/*              value: {{ .Values.auth.username | quote }}*/}}
             {{- if .Values.auth.usePasswordFiles }}
             - name: MARIADB_PASSWORD_FILE
               value: {{ default "/opt/bitnami/mariadb/secrets/mariadb-password" .Values.auth.customPasswordFiles.user }}
@@ -182,7 +186,11 @@ spec:
             {{- end }}
             {{- end }}
             - name: MARIADB_DATABASE
-              value: {{ .Values.auth.database | quote }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "mariadb.secretName" . }}
+                  key: mariadb-database
+{{/*              value: {{ .Values.auth.database | quote }}*/}}
             {{- if eq .Values.architecture "replication" }}
             - name: MARIADB_REPLICATION_MODE
               value: "master"
