--- a/mariadb/values-overriding.yaml
+++ b/mariadb/values-overriding.yaml
@@ -1,2 +1,17 @@
 auth:
   existingSecret: "gatherplan-mariadb"
+
+primary:
+  containerSecurityContext:
+    enabled: true
+    seLinuxOptions: {}
+    runAsUser: 0
+    runAsGroup: 0
+    runAsNonRoot: false
+    privileged: false
+    allowPrivilegeEscalation: true
+    readOnlyRootFilesystem: false
+    capabilities:
+      drop: ["ALL"]
+    seccompProfile:
+      type: "RuntimeDefault"
