--- a/mariadb/values-overriding.yaml
+++ b/mariadb/values-overriding.yaml
@@ -2,5 +2,8 @@ auth:
   existingSecret: "gatherplan-mariadb"
 
 primary:
+  podSecurityContext:
+    enabled: false
+
   containerSecurityContext:
     enabled: false
