--- a/gatherplan-server/values-overriding.yaml
+++ b/gatherplan-server/values-overriding.yaml
@@ -8,30 +8,42 @@ env:
     valueFrom:
       configMapKeyRef:
         name: gatherplan-configmap
+        key: JWT_SECRET_KEY
   - name: KAKAO_KEY
     valueFrom:
       configMapKeyRef:
         name: gatherplan-configmap
+        key: KAKAO_KEY
+
   - name: SENDER_EMAIL
     valueFrom:
       configMapKeyRef:
         name: gatherplan-configmap
+        key: SENDER_EMAIL
+
   - name: SENDER_PASSWORD
     valueFrom:
       configMapKeyRef:
         name: gatherplan-configmap
+        key: SENDER_PASSWORD
+
   - name: DB_SERVER
     valueFrom:
       configMapKeyRef:
         name: gatherplan-configmap
+        key: DB_SERVER
+
   - name: DB_USER
     valueFrom:
       configMapKeyRef:
         name: gatherplan-configmap
+        key: DB_USER
+
   - name: DB_PASSWORD
     valueFrom:
       configMapKeyRef:
         name: gatherplan-configmap
+        key: DB_PASSWORD
 
 command:
   - /bin/bash
