--- a/gatherplan-server/templates/deployment.yaml
+++ b/gatherplan-server/templates/deployment.yaml
@@ -36,6 +36,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            {{- toYaml .Values.env | nindent 12 }}
+          command:
+            {{- toYaml .Values.command | nindent 14 }}
+          args:
+            {{- toYaml .Values.args | nindent 14 }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
@@ -46,8 +52,6 @@ spec:
 {{/*            {{- toYaml .Values.readinessProbe | nindent 12 }}*/}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          env:
-            {{- toYaml .Values.env | nindent 12}}
           {{- with .Values.volumeMounts }}
           volumeMounts:
             {{- toYaml . | nindent 12 }}
