--- a/gatherplan-client-back/values-overriding.yaml
+++ b/gatherplan-client-back/values-overriding.yaml
@@ -6,6 +6,8 @@ image:
 env:
   - name: API_URL
     value: http://localhost:8000
+  - name: BACKEND_URL
+    value: http://gatherplan-server.gatherplan-server.svc.cluster.local:8080
 command:
   - /bin/bash
 args:
