--- a/gatherplan-client-front/values-overriding.yaml
+++ b/gatherplan-client-front/values-overriding.yaml
@@ -5,6 +5,8 @@ image:
 env:
   - name: API_URL
     value: https://test-api.gatherplan.site
+  - name: BACKEND_URL
+    value: http://gatherplan-server.gatherplan-server.svc.cluster.local:8080
 command:
   - /bin/bash
 args:
