--- a/cert-manager/values.yaml
+++ b/cert-manager/values.yaml
@@ -142,10 +142,10 @@ extraEnv: []
 # - name: SOME_VAR
 #   value: 'some value'
 
-resources: {}
-  # requests:
-  #   cpu: 10m
-  #   memory: 32Mi
+resources:
+   requests:
+     cpu: 10m
+     memory: 32Mi
 
 # Pod Security Context
 # ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
@@ -344,10 +344,10 @@ webhook:
   # Path to a file containing a WebhookConfiguration object used to configure the webhook
   # - --config=<path-to-config-file>
 
-  resources: {}
-    # requests:
-    #   cpu: 10m
-    #   memory: 32Mi
+  resources:
+     requests:
+       cpu: 10m
+       memory: 32Mi
 
   ## Liveness and readiness probe values
   ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
@@ -517,10 +517,10 @@ cainjector:
   # Enable profiling for cainjector
   # - --enable-profiling=true
 
-  resources: {}
-    # requests:
-    #   cpu: 10m
-    #   memory: 32Mi
+  resources:
+     requests:
+       cpu: 10m
+       memory: 32Mi
 
   nodeSelector:
     kubernetes.io/os: linux
@@ -628,10 +628,10 @@ startupapicheck:
   # To see all available flags run docker run quay.io/jetstack/cert-manager-ctl:<version> --help
   extraArgs: []
 
-  resources: {}
-    # requests:
-    #   cpu: 10m
-    #   memory: 32Mi
+  resources:
+     requests:
+       cpu: 10m
+       memory: 32Mi
 
   nodeSelector:
     kubernetes.io/os: linux
