--- a/nginx-ingress-controller/values.yaml
+++ b/nginx-ingress-controller/values.yaml
@@ -269,12 +269,13 @@ resources:
   ## limits:
   ##    cpu: 250m
   ##    memory: 256Mi
-  limits: {}
-  ## Examples:
-  ## requests:
-  ##    cpu: 250m
-  ##    memory: 256Mi
-  requests: {}
+  # Examples:
+  # requests:
+  #    cpu: 250m
+  #    memory: 256Mi
+   requests:
+      cpu: 250m
+      memory: 256Mi
 ## Controller containers' liveness probe. Evaluated as a template.
 ## ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
 ## @param livenessProbe.enabled Enable livenessProbe
@@ -544,12 +545,14 @@ defaultBackend:
     ## limits:
     ##    cpu: 250m
     ##    memory: 256Mi
-    limits: {}
+#    limits: {}
     ## Examples:
     ## requests:
     ##    cpu: 250m
     ##    memory: 256Mi
-    requests: {}
+    requests:
+      cpu: 250m
+      memory: 256Mi
   ## Default backend containers' liveness probe. Evaluated as a template.
   ## ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
   ## @param defaultBackend.livenessProbe.enabled Enable livenessProbe
