server resource 정의

--- a/gatherplan-client-back/values-overriding.yaml
+++ b/gatherplan-client-back/values-overriding.yaml
@@ -36,3 +36,8 @@ readinessProbe:
     path: /ping
     port: http
   initialDelaySeconds: 120
+
+resources:
+   requests:
+     cpu: 100m
+     memory: 312Mi
