--- a/gatherplan-client-front/values-overriding.yaml
+++ b/gatherplan-client-front/values-overriding.yaml
@@ -35,3 +35,8 @@ readinessProbe:
     path: /ping
     port: http
   initialDelaySeconds: 120
+
+resources:
+   requests:
+     cpu: 100m
+     memory: 512Mi
