--- a/argo-cd/values-overriding.yaml
+++ b/argo-cd/values-overriding.yaml
@@ -9,9 +9,10 @@ server:
     hostname: argocd.gatherplan.site
     ingressClassName: nginx
 
-  requests:
-    cpu: 50m
-    memory: 64Mi
+  resources:
+    requests:
+      cpu: 50m
+      memory: 64Mi
 
 configs:
   cm:
@@ -25,7 +26,7 @@ configs:
 controller:
   resources:
     requests:
-      cpu: 250m
+      cpu: 50m
       memory: 256Mi
 
 dex:
@@ -37,7 +38,7 @@ dex:
 redis:
   resources:
     requests:
-      cpu: 100m
+      cpu: 50m
       memory: 64Mi
 
 
@@ -51,5 +52,5 @@ repoServer:
 applicationSet:
   resources:
      requests:
-     cpu: 100m
-     memory: 128Mi
+       cpu: 50m
+       memory: 64Mi
