argocd configs 추가

--- a/argo-cd/values-overriding.yaml
+++ b/argo-cd/values-overriding.yaml
@@ -17,6 +17,8 @@ server:
 configs:
   cm:
     exec.enabled: true
+    accounts.github: apiKey
+#    accounts.<UserName>: <type>
 
   rbac:
     policy.csv: |
