--- a/gatherplan-client-back/values-overriding.yaml
+++ b/gatherplan-client-back/values-overriding.yaml
@@ -4,6 +4,8 @@ image:
   pullPolicy: IfNotPresent
   tag: v0e02c07
 env:
+  - name: ENV
+    value: prod
   - name: API_URL
     value: http://localhost:8000
   - name: BACKEND_URL
