--- a/gatherplan-client-front/values-overriding.yaml
+++ b/gatherplan-client-front/values-overriding.yaml
@@ -3,6 +3,8 @@ image:
   pullPolicy: IfNotPresent
   tag: v0e02c07
 env:
+  - name: ENV
+    value: prod
   - name: API_URL
     value: https://api.gatherplan.site
   - name: BACKEND_URL
